deploy/manifests/dev/us-east-2/tenant/storetheindex/instances/dina/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  template:
    spec:
      serviceAccountName: storetheindex
      terminationGracePeriodSeconds: 600
      containers:
        - name: indexer
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: "3"
              memory: 28Gi
            requests:
              cpu: "3"
              memory: 28Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - r6a.xlarge
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-2a
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dina-data
